[gd_scene load_steps=10 format=3 uid="uid://c14mclctv6ack"]

[ext_resource type="Script" path="res://scripts/level_1/criar_path_set_num.gd" id="1_ipxu4"]
[ext_resource type="Material" uid="uid://ddpwqy41qf85d" path="res://shaders/bg_material.tres" id="2_a3khq"]
[ext_resource type="FontFile" uid="uid://bon14dm77mpt8" path="res://fonts/KGRedHands.ttf" id="2_p7u8x"]
[ext_resource type="LabelSettings" uid="uid://cgl76j25jy15c" path="res://themes/instructions_label_settings.tres" id="4_ukq0g"]

[sub_resource type="Gradient" id="Gradient_mfpkk"]
offsets = PackedFloat32Array(0, 0.201299)
colors = PackedColorArray(0, 0, 0, 0.682353, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_keesj"]
gradient = SubResource("Gradient_mfpkk")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_ttvyg"]
font = ExtResource("2_p7u8x")
font_size = 50
font_color = Color(1, 0, 0.239216, 1)
outline_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n3fof"]
bg_color = Color(1, 0.805, 0.22, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i026o"]
bg_color = Color(1, 0, 0.219608, 1)

[node name="CriarPath" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ipxu4")

[node name="GradientBG" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 1890.0
offset_bottom = 980.0
texture = SubResource("GradientTexture2D_keesj")

[node name="BG" type="ColorRect" parent="."]
unique_name_in_owner = true
material = ExtResource("2_a3khq")
layout_mode = 0
offset_right = 1890.0
offset_bottom = 980.0
color = Color(0, 0, 0, 1)

[node name="SetNumContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1890.0
offset_bottom = 980.0

[node name="TamRotaLineField" type="LineEdit" parent="SetNumContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 50
placeholder_text = "Tamanho da rota"
alignment = 1

[node name="InsertValidIntLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_top = 528.0
offset_right = 1890.0
offset_bottom = 873.0
text = "Por favor, insira um
tamanho de rota v√°lido!"
label_settings = SubResource("LabelSettings_ttvyg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="InstructionLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 1890.0
offset_bottom = 268.0
text = "Insira o tamanho da rota e clique nas setas para criar
a rota da nave."
label_settings = ExtResource("4_ukq0g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PathButtonsContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1890.0
offset_bottom = 980.0
mouse_filter = 2

[node name="PathButtons" type="HFlowContainer" parent="PathButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1800, 0)
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
alignment = 1

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_top = 873.0
offset_right = 1890.0
offset_bottom = 982.0
theme_override_constants/separation = 50
alignment = 1

[node name="VerMapa" type="Button" parent="Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_n3fof")
text = "Ver mapa"

[node name="Ok" type="Button" parent="Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_n3fof")
text = "Ok"

[node name="Cancelar" type="Button" parent="Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_i026o")
text = "Cancelar"

[connection signal="text_submitted" from="SetNumContainer/TamRotaLineField" to="." method="_on_tam_rota_line_field_text_submitted"]
[connection signal="pressed" from="Buttons/VerMapa" to="." method="_on_ver_mapa_pressed"]
[connection signal="pressed" from="Buttons/Ok" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="Buttons/Cancelar" to="." method="_on_cancelar_pressed"]
